Enhanced code